--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,14 +20,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up environment
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        miniconda-version: "latest"
-        environment-file: environment.yml
-        python-version: "3.9.*"
+      run:
+        pip install -e .
     - name: Lint with flake8
       run: |
-        flake8 fff
+        flake8 rtdfects
     - name: Test with pytest
       run: |
         pytest --cov=rtdefects tests
