--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,6 +21,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up environment
       run:
+        pip install --upgrade pip setuptools
         pip install -e .
     - name: Lint with flake8
       run: |
