--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up environment
-      run:
+      run: |
         pip install --upgrade pip setuptools
         pip install -e .
     - name: Lint with flake8
