--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Set up environment
       run: |
         pip install --upgrade pip setuptools
+        pip install "torch<2" --index-url https://download.pytorch.org/whl/cpu
         pip install -e .
     - name: Lint with flake8
       run: |
