--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
         pip install -e .[test]
     - name: Lint with flake8
       run: |
-        flake8 rtdfects
+        flake8 rtdefects
     - name: Test with pytest
       run: |
         pytest --cov=rtdefects tests
