--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - imageio==2.19.3
   - imageio-ffmpeg
   - trackpy==0.5.*
+  - pint<0.20
   - hyperspy-base
   - bokeh
   - flake8
