--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         pip install --upgrade pip setuptools
         pip install "torch<2" --index-url https://download.pytorch.org/whl/cpu
-        pip install -e .[test]
+        pip install -e .[test,tf,torch]
     - name: Lint with flake8
       run: |
         flake8 rtdefects
