--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,10 @@ torch = [
     "torch<2",
     "albumentations==1.*",
 ]
+detectron = [
+    "pybind11",
+    "detectron2@git+https://github.com/facebookresearch/detectron2.git"
+]
 
 [project.scripts]
 rtdefects = "rtdefects.cli:main"
