Add support for instance segmentation (#20)
* Separate mask labeling from analysis

* Include detectron2 in the environment

* Send the binary mask back

I'll figure out how to send the instance-aware mask back later

* Remove deprecated argument

* Introduce an instance segmentation class

Move the logic for identifying instances into the segmenter

* Update CLI to return the labeled mask

* Add detectron2 model

* Add detectron2 to optional requirements

* Install torchvision and torchaudio from pytorch

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Set up environment
       run: |
         pip install --upgrade pip setuptools
-        pip install "torch<2" --index-url https://download.pytorch.org/whl/cpu
-        pip install -e .[test,tf,torch]
+        pip install "torch<2" torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+        pip install -e .[test,tf,torch,detectron]
     - name: Lint with flake8
       run: |
         flake8 rtdefects
