--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,11 @@ dependencies = [
     "flask-cors",
     "bokeh",
     "funcx",
-    "ratelimit"
+    "ratelimit",
+
+    # Build enviroment issues
+    #  See: https://github.com/pytorch/serve/issues/3176
+    "setuptools<70"
 ]
 
 [tool.setuptools.packages.find]
@@ -63,7 +67,7 @@ torch = [
 ]
 detectron = [
     "pybind11",
-    "detectron2@git+https://github.com/facebookresearch/detectron2.git"
+    "detectron2@git+https://github.com/facebookresearch/detectron2.git@b7c7f4ba82192ff06f2bbb162b9f67b00ea55867"
 ]
 
 [project.scripts]
