--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,10 @@ dependencies:
   # General support for deep learning
   - pytorch-cuda==11.7
   - pytorch<2
+  - numpy<2.1
+  - pandas
+  - scipy
+  - scikit-image==0.19.*
 
   # Instance segmentation models
   - torchvision
@@ -29,7 +33,7 @@ dependencies:
   # Not available on Conda
   - pip:
     # Detectron2
-    - git+https://github.com/facebookresearch/detectron2.git
+#    - git+https://github.com/facebookresearch/detectron2.git
 
 
     # Remote computing
@@ -38,4 +42,4 @@ dependencies:
     - funcx-endpoint
 
     # Base libraries
-    - -e .[tf,torch]
+    - -e .[torch]
